# snake

./: CMakeLists.txt  README.md  snake.c
lib/: buzzer.c  buzzer.h  font.h  neopixel.c  neopixel.h  ssd1306.c  ssd1306.h
